edit (trial|id) to (1|id) on CogControl script to be consistent with the results from the draft; left a question mark on the dsouza scripts to whether we should keep the random slope or just the random intercept.

--- a/scripts/raw_data_analysis.Rmd
+++ b/scripts/raw_data_analysis.Rmd
@@ -832,7 +832,7 @@ anova(lmermodel_7pre, lmermodel_7pre2) # the full model is the best
 
 ###------------------------------------------------------------GLMER - MORE APPROPRIATE-----
 
-glmermodel_7pre <- glmer(SamplesInAOI / SamplesTotal ~ language * TimeBin * trial_num_scaled + (trial_num_scaled | recording_name), data = model_data_7_pre, family = binomial, weights = SamplesTotal, control=glmerControl(optimizer="bobyqa", optCtrl = list(maxfun = 100000))) # nearly everything is significant in the glmer model
+glmermodel_7pre <- glmer(SamplesInAOI / SamplesTotal ~ language * TimeBin * trial_num_scaled + (1 | recording_name), data = model_data_7_pre, family = binomial, weights = SamplesTotal, control=glmerControl(optimizer="bobyqa", optCtrl = list(maxfun = 100000))) # nearly everything is significant in the glmer model
 
 final_model_pre_7 <-  glmermodel_7pre
   
@@ -862,7 +862,7 @@ anova(lmermodel_7post, lmermodel_7post2) # the full model is slightly significan
 ###-------------------------------------------------------------GLMER model--------------------
 
 #glmer attempt
-glmermodel_7post <- glmer(SamplesInAOI / SamplesTotal ~ language * TimeBin * trial_num_scaled + (trial_num_scaled | recording_name), data = model_data_7_post, family = binomial, weights = SamplesTotal, control=glmerControl(optimizer="bobyqa", optCtrl = list(maxfun = 100000))) # nearly everything is significant in the glmer model
+glmermodel_7post <- glmer(SamplesInAOI / SamplesTotal ~ language * TimeBin * trial_num_scaled + (1 | recording_name), data = model_data_7_post, family = binomial, weights = SamplesTotal, control=glmerControl(optimizer="bobyqa", optCtrl = list(maxfun = 100000))) # nearly everything is significant in the glmer model
 
 final_model_post_7 <- glmermodel_7post
 
